feat: updates and rust